fix: allocate a container whose module refuses privateLookupIn (#411)